--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -23,7 +23,8 @@
     }
     &__logo {
  
-      
+       display: block;
+       padding: 16px 0;
         font-family: 'Raleway';
         font-weight: 700;
         font-size: 24px;
