--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -279,8 +279,7 @@ margin-left: 93px;
 //     display: block;
 //     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   
-//     padding-top: 32px;
-//     padding-bottom: 32px;
+//   
     
 //   }
 //   .header-link:hover,
