--- a/css/main.css
+++ b/css/main.css
@@ -145,25 +145,33 @@ address {
   display: -ms-flexbox;
   display: flex;
 }
+.header__logo {
+  display: block;
+  padding: 16px 0;
+  font-family: "Raleway";
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 1.1666666667;
+  letter-spacing: 0.03em;
+  text-decoration: none;
+  color: var(--accent-color);
+  padding-top: 16px;
+  padding-bottom: 16px;
+  font-size: 22px;
+  line-height: 1.0909090909;
+}
 @media screen and (min-width: 768px) {
   .header__logo {
-    font-family: "Raleway";
-    font-weight: 700;
-    font-size: 24px;
-    line-height: 1.1666666667;
-    letter-spacing: 0.03em;
-    text-decoration: none;
-    color: var(--accent-color);
-    padding-top: 24px;
-    padding-bottom: 25px;
-    font-size: 22px;
-    line-height: 1.0909090909;
+    padding-top: 26px;
+    padding-bottom: 26px;
   }
 }
 @media screen and (min-width: 1200px) {
   .header__logo {
     font-size: 26px;
     line-height: 1.1923076923;
+    padding-top: 24px;
+    padding-bottom: 25px;
   }
 }
 @media screen and (max-width: 768px) {
@@ -196,8 +204,6 @@ address {
   display: block;
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  padding-top: 32px;
-  padding-bottom: 32px;
 }
 .header__link:hover, .header__link:focus {
   color: var(--accent-color);
@@ -245,8 +251,6 @@ address {
   -webkit-column-gap: 50px;
      -moz-column-gap: 50px;
           column-gap: 50px;
-  padding-top: 32px;
-  padding-bottom: 32px;
 }
 @media screen and (max-width: 767.98px) {
   .header .contacts {
@@ -1070,11 +1074,11 @@ address {
 }
 
 .footer {
-  padding-top: 60px;
   padding-bottom: 60px;
+  padding-top: 60px;
   background-color: #2F303A;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .footer__contacts {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -1134,7 +1138,7 @@ address {
   margin-top: 20px;
   margin-top: 20px;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .footer__address {
     margin-bottom: 12px;
   }
@@ -1144,7 +1148,7 @@ address {
     margin-bottom: 12px;
   }
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .footer__item {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -1173,7 +1177,7 @@ address {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   text-decoration: none;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .footer__link {
     margin-bottom: 12px;
   }
@@ -1208,7 +1212,7 @@ address {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   text-decoration: none;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .footer__link-mail {
     margin-bottom: 12px;
   }
@@ -1236,7 +1240,7 @@ address {
   color: var(--accent-color);
   text-decoration: none;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .footer__social {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -1336,11 +1340,6 @@ address {
           flex-direction: column;
   margin-right: 0 auto;
 }
-@media screen and (max-width: 768px) {
-  .footer__fedback-wrapper {
-    margin-top: 60px;
-  }
-}
 @media screen and (min-width: 768px) {
   .footer__fedback-wrapper {
     display: -webkit-box;
@@ -1377,7 +1376,7 @@ address {
   color: #FFFFFF;
   margin-bottom: 20px;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .footer__text {
     -ms-flex-pack: distribute;
         justify-content: space-around;
@@ -1396,7 +1395,7 @@ address {
     margin-bottom: 20px;
   }
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .footer__input {
     margin-bottom: 20px;
     width: 100%;
@@ -1487,7 +1486,7 @@ address {
   -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .footer__btn {
     margin: 0 auto;
   }
@@ -1495,7 +1494,7 @@ address {
 .footer__form {
   width: 100%;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .footer__form {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -1562,7 +1561,7 @@ address {
       -ms-flex-direction: row;
           flex-direction: row;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .footer .container {
     display: -webkit-box;
     display: -ms-flexbox;
