--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -55,7 +55,7 @@
 @media screen and (min-width: 768px) {
   display: flex;
   margin-left: 88px;
-  align-items: center;
+  align-items: flex-end;
 
     
   }
@@ -67,10 +67,10 @@ margin-left: 93px;
     }
     &__link {
       @media screen and (max-width: 768px) {
-      
+      padding-bottom: 32px;
       }
       @media screen and (min-width: 768px) {
-       
+       padding-bottom: 32px;
   
       }
   
