--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,5 +1,6 @@
 .footer {
-
+  padding-top: 60px;
+  padding-bottom: 60px;
 
     background-color: #2F303A;
     &__contacts {
@@ -387,7 +388,7 @@
     display: flex;
     flex-wrap: nowrap;
     align-items: baseline;
-    padding-bottom: 60px;
+   
     }
   }
 
