--- a/css/main.css
+++ b/css/main.css
@@ -1373,6 +1373,7 @@ address {
     -webkit-box-align: start;
         -ms-flex-align: start;
             align-items: flex-start;
+    margin-top: 0;
   }
 }
 .footer__text {
