--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -122,6 +122,7 @@
         color: rgba(255, 255, 255, 0.6);
         transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
       
+      
         
         text-decoration: none;
         &:hover,
@@ -213,6 +214,7 @@
       @media screen and (min-width: 1200px) {
         display: flex;
         align-items: flex-start;
+        margin-top: 0;
       }
     }
     &__text {
