--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -51,26 +51,29 @@
         
       }
       &__item {
+        margin-bottom: 12px;
         @media screen and (max-width: 767px) {
           display:flex;
           flex-direction: column;
           align-items: center;
         }
         
-        @media screen and (min-width: 768px) {
-          margin-bottom: 12px;
+        // @media screen and (min-width: 768px) {
+        //   margin-bottom: 12px;
+        // }
+        // @media screen and (min-width: 1200px) {
+          
+        //   margin-bottom: 0;
+         
+        //   }
         }
-      }
-      @media screen and (min-width: 1200px) {
-      margin-bottom: 0;
-      }
+    
       &__link {
-        @media screen and (max-width: 767px) {
-          margin-bottom: 12px;
-        }
-      
-
-        
+        // @media screen and (max-width: 767px) {
+        //   margin-bottom: 12px;
+        // }
+        margin-bottom: 12px;
+     
         font-style: normal;
         font-size: 14px;
         line-height: calc(24/14);
@@ -105,6 +108,10 @@
           margin-bottom: 12px;
         }
 
+        @media screen and (min-width: 1200px) {
+          margin-bottom: 12px;
+        }
+        margin-bottom: 12px;
         font-style: normal;
         font-size: 14px;
         line-height: calc(24/14);
@@ -120,6 +127,8 @@
         }
       }
       &__link-tel {
+        @media screen and (min-width: 1200px) {
+      
         font-style: normal;
         font-size: 14px;
         line-height: calc(24/14);
@@ -134,6 +143,9 @@
         &:focus {
             color: var(--accent-color);
             text-decoration: none; 
+        }
+        @media screen and (min-width: 1200px) {
+         
         }
       }
       &__social {
