--- a/css/main.css
+++ b/css/main.css
@@ -1145,18 +1145,12 @@ address {
   color: #FFFFFF;
 }
 .footer__address {
-  margin-top: 20px;
-  margin-top: 20px;
+  margin-top: 28px;
+  margin-top: 28px;
 }
-@media screen and (max-width: 767px) {
-  .footer__address {
-    margin-bottom: 12px;
-  }
-}
-@media screen and (min-width: 768px) {
-  .footer__address {
-    margin-bottom: 12px;
-  }
+.footer__item {
+  margin-top: 12px;
+  margin-bottom: 0;
 }
 @media screen and (max-width: 767px) {
   .footer__item {
@@ -1173,6 +1167,7 @@ address {
   }
 }
 .footer__link {
+  margin-bottom: 12px;
   font-style: normal;
   font-size: 14px;
   line-height: 1.7142857143;
