--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -44,6 +44,22 @@
           url(../img/hero/img_phone@2x.jpg);
       }
      
+      @media screen and (min-width: 768px) {
+        background-image: linear-gradient(
+          rgba(47, 48, 58, 0.4),
+          rgba(47, 48, 58, 0.4)), 
+          url(../img/hero/img_tablet@1x.jpg);
+         
+          
+          @media screen and (min-device-pixel-ratio: 2),
+          (min-resolution: 192dpi),
+          (min-resolution: 2dppx) {
+            background-image: linear-gradient(
+              rgba(47, 48, 58, 0.4),
+              rgba(47, 48, 58, 0.4)), 
+              url(../img/hero/img_tablet@2x.jpg);
+          }
+      }
     // desktop screen 
     @media screen and (min-width: 1200px) {
      height: 600px;
